<resources>
    <string name="app_name">Volume Controller</string>

    <string name="usage">Turn on Hotspot of this phone and connect laptop with its wifi.\n\nThen start server program in the laptop.</string>
    <string name="connection_status_connected">Connected</string>
    <string name="connection_status_not_connected">Not connected</string>
    <string name="connection_status">Connection status</string>
    <string name="ip_address_label">IP address</string>
    <string name="port_number_label">Port number</string>
    <string name="connect">Connect</string>

</resources>
