<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="vertical">

        <TextView
            style="@style/TextAppearance.AppCompat.Large"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="64dp"
            android:text="@string/usage" />

        <com.jem.rubberpicker.RubberSeekBar
            android:id="@+id/rubber_seeker_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="64dp"
            app:dampingRatio="0.3"
            app:defaultThumbRadius="16dp"
            app:elasticBehavior="cubic"
            app:highlightDefaultThumbOnTouchColor="#CD5D67"
            app:highlightTrackColor="#BA1F33"
            app:highlightTrackWidth="8dp"
            app:maxValue="100"
            app:minValue="0"
            app:normalTrackColor="#AAAAAA"
            app:normalTrackWidth="4dp"
            app:stiffness="300"
            app:stretchRange="24dp" />


        <TextView
            android:id="@+id/connection_status"
            style="@style/TextAppearance.AppCompat.Large"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="64dp"
            android:gravity="center"
            android:text="@string/connection_status_not_connected" />

        <EditText
            android:id="@+id/ip_address_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:hint="@string/ip_address_label"
            android:importantForAutofill="no"
            android:inputType="text" />

        <EditText
            android:id="@+id/port_number_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:hint="@string/port_number_label"
            android:importantForAutofill="no"
            android:inputType="number" />

        <Button
            android:id="@+id/connect_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/connect" />

    </LinearLayout>

</ScrollView>
